2013-03-18: Release v0.5.0.

2013-03-18: Do not crash if killing subprocess fails because it is already killed.

2013-03-18: Ensure compatibility with a wider range of python versions.

2013-03-18: Do not fail horribly on write permission errors.

2013-03-11: Preforking runner implementation (hopefully fixes issues on FreeBSD).

2013-03-11: Be smarter about picking a `ping` binary, trying first fping
            then falling back to straight ping.

2013-02-20: Don't crash on missing data, just print a warning.

2013-02-20: Workaround for bad exit codes on bsd.

2013-02-14: Release v0.4.2.

2013-01-25: Encode title in data set filename if set.

2013-01-22: Fix possible divide by zero error on certain data values.

2013-01-22: Get rid of the colons in the time stamps used for file names (they
            give rise to escaping headaches).

2012-12-20: Release v0.4.1.

2012-12-20: Fix cutoff logic when end cutoff value is 0.

2012-12-20: If there are missing data values when doing a CDF plot, the plot
            should cut off at a probability < 1; i.e. use the total size of the
            data (including null data points) as data set size when calculating
            probability.

2012-12-17: Release v0.4.0.

2012-12-15: Add stats formatter (-f stats) to output statistics on results data sets.

2012-12-13: Fix bug that caused smoothing to add new data points at the ends of
            series.

2012-12-13: Fix bug that caused primary axis to place ticks on the right hand
            side in dual-axis plots.

2012-12-13: Release v0.3.0.

2012-12-13: Lookup hostnames before starting runners and determine default IP
            version from them. Thanks to David Woodhouse for the suggestion.

2012-12-13: Add workaround for bug in old matplotlib versions that broke
            exporting of plots.

2012-12-10: Add options to turn off annotation, legend and title on plots
            (--no-annotation, --no-legend and --no-title resp.).
